--- a/src/Components/Card1/Card1.css
+++ b/src/Components/Card1/Card1.css
@@ -1,18 +1,8 @@
-p{
-    
-   
-    margin: 0;
-
+p {
+  margin: 0;
 }
 
-.content{
-    display: flex;
-    flex-direction: column;
+#canvas {
     width:300px;
     height:300px;
-    justify-content: center;
-    align-items: center;
-
-
-
 }
