--- a/src/Components/Card1/Card1.css
+++ b/src/Components/Card1/Card1.css
@@ -2,7 +2,10 @@ p {
   margin: 0;
 }
 
+.play {
+  position: relative;
+}
+
 #canvas {
-    width:300px;
-    height:300px;
+  position: absolute;
 }
