--- a/src/App.css
+++ b/src/App.css
@@ -1,67 +1,57 @@
+body {
+  font-family: "Andika", sans-serif;
+  background-color: rgb(47, 155, 185);
+  margin: 0;
+}
+
 .container {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
 }
 
-@media (max-width:480px){
-  
-
-  .container{
+@media (max-width: 480px) {
+  .container {
     flex-direction: column;
   }
 
-  .card{
+  .card {
+    width: 400px;
+    height: 400px;
+    margin-bottom: 20px;
+  }
+
+  .carding {
     width: 300px;
-  height: 300px;
-  margin-bottom: 20px;
+    height: 300px;
   }
 
-  .carding{
-
-    width:200px;
-  height: 200px;
-
+  .pak {
+    font-size: 15px;
   }
-
-  .pak{
-    
-    font-size: 14px;
-}
-}
-body{
-  background-color: cornsilk;
-  margin:0;
 }
 
 .card {
   background-color: coral;
   align-self: center;
-  width: 500px;
+  width: 400px;
   height: 500px;
   border-radius: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  
 }
 
 .carding {
   display: flex;
-  background-color: cornflowerblue;
-  width:300px;
+  width: 300px;
   height: 300px;
   border-radius: 5px;
   flex-direction: column;
-  
-
-
-
 }
 
-.pak{
+.pak {
   font-weight: 500;
-  font-size: 17px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 19px;
 }
