--- a/src/Components/Card1/Card1.css
+++ b/src/Components/Card1/Card1.css
@@ -8,4 +8,10 @@ p {
 
 #canvas {
   position: absolute;
+  background-color: rgb(230, 111, 20);
+  box-shadow: 2px 2px 2px;
+}
+
+.content {
+  box-shadow: 2px 2px 2px;
 }
