--- a/src/Components/Element/Element.css
+++ b/src/Components/Element/Element.css
@@ -4,5 +4,6 @@
   align-items: center;
   width: 300px;
   height: 300px;
-  background-color: rgb(247, 93, 32);
+  background-color: rgb(217, 196, 187);
+  flex-direction: column;
 }
